--- a/pertemuan7/components.html
+++ b/pertemuan7/components.html
@@ -56,6 +56,7 @@
         <a href="#" class="badge badge-info">Info</a>
         <a href="#" class="badge badge-light">Light</a>
         <a href="#" class="badge badge-dark">Dark</a>
+        test
         <br>
         <br>
         <br>
